# IDS.655-AI-Studio

./: .gitignore  README.md  pyproject.toml
src/: generate_email.py
src/dad_s_daily_digital_twin/: crew.py  main.py
src/dad_s_daily_digital_twin/config/: agents.yaml  tasks.yaml
src/social_media_emotional_bias_detector/: crew.py  main.py
src/social_media_emotional_bias_detector/config/: agents.yaml  tasks.yaml
src/social_media_emotional_bias_detector/tools/: reddit_api_tool.py  simple_reddit_scrape_tool.py
