[project]
name = "social_media_emotional_bias_detector"
version = "0.1.0"
description = "social_media_emotional_bias_detector using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.203.0,<1.0.0"
]

[project.scripts]
social_media_emotional_bias_detector = "social_media_emotional_bias_detector.main:run"
run_crew = "social_media_emotional_bias_detector.main:run"
train = "social_media_emotional_bias_detector.main:train"
replay = "social_media_emotional_bias_detector.main:replay"
test = "social_media_emotional_bias_detector.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
